--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: gray;
   height: 150px;
   padding: 20px;
   color: white;
@@ -20,6 +20,12 @@
 
 .App-intro {
   font-size: large;
+}
+
+.form-components {
+  display: block;
+  margin: 0 auto;
+  padding: 15px;
 }
 
 @keyframes App-logo-spin {
